--- a/src/blocks/radio-button/radio-button.scss
+++ b/src/blocks/radio-button/radio-button.scss
@@ -47,7 +47,7 @@
     }
   }
   &__value {
-    font-family: Montserrat;
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
