--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,3 @@
-
 html,
 body {
   padding: 0;
@@ -17,11 +16,6 @@ p {
   margin-inline-end: 0px;
 }
 
-.material-icons__like {
-  font-size: 14px;
-  color: rgba(31, 32, 65, 0.25);
-}
-
 .container {
   width: 80.5vw;
   margin: 0 auto;
@@ -33,6 +27,11 @@ p {
   justify-content: space-between;
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
 .logo {
   background-image: url(../images/logo.svg);
   background-repeat: no-repeat;
@@ -41,7 +40,6 @@ p {
   vertical-align: middle;
   margin-top: 25px;
   display: inline-block;
-  
 }
 
 .title-main {
@@ -112,20 +110,6 @@ hr {
   }
 }
 
-.label {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #1F2041;
-  text-align: left;
-  display: inline-block;
-  width: 100%;
-  margin-bottom: 5px;
-}
-
 .text {
   font-style: normal;
   font-weight: normal;
@@ -133,36 +117,6 @@ hr {
   letter-spacing: 0;
 }
 
-.formtext {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 1.1rem;
-  letter-spacing: 0;
-  color: #000000;
-  display: flex;
-  font-size: 14px;
-  margin-top: 12px;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-.label-radio {
-  font-size: 20.6px;
-  margin-left: 15px;
-  margin-right: 28px;
-}
-
-.input-date {
-  width: 150px;
-  height: 44px;
-  border: 1px solid rgba(31, 32, 65, 0.5);
-  box-sizing: border-box;
-  border-radius: 4px;
-  display: block;
-}
 @media only screen and (max-width: 1000px) {
   .container {
     width: 95%;
@@ -174,6 +128,11 @@ hr {
   body {
     font-size: 16px;
   }
+  .btn-confirm {
+    width: 390px;
+    background-position-x: 22rem;
+    background-position-y: 1.4rem;
+  }
 }
 
 @media only screen and (max-width: 450px) {
@@ -184,6 +143,7 @@ hr {
 
   .btn-confirm {
     width: 390px;
+    background-image: none;
   }
 }
 
