did one mixin for all buttons

--- a/src/blocks/calculator/calculator.pug
+++ b/src/blocks/calculator/calculator.pug
@@ -35,7 +35,7 @@ mixin calculator(roomNumber, pricePerDay, day, checkin, checkout, titleDropdown,
                         span(class='price__info price__info_extra') i
                 p(class='calculator__text')= additionalTax
             h3(class='calculator__total-price')= totalPrice
-            button(type='button' class='btn btn-confirm')= button
+            button(type='button' class='btn btn__confirm')= button
                 
 
 
