--- a/src/blocks/calculator/calculator.scss
+++ b/src/blocks/calculator/calculator.scss
@@ -74,7 +74,7 @@
     &__total-price {
       font-weight: bold;
     }
-    & .btn-confirm {
+    & .btn__confirm {
       width: 460px;
     }
   }
@@ -108,7 +108,7 @@
     &__title_datepicker_checkout {
       margin-left: 25%;
     }
-    & .btn-confirm {
+    & .btn__confirm {
       width: 370px;
     }
   }
@@ -144,7 +144,7 @@
     &__title_datepicker_checkout {
       margin-left: 20%;
     }
-    & .btn-confirm {
+    & .btn__confirm {
       width: 290px;
       height: 55px;
     }
