--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -75,7 +75,7 @@
         width: 400px;
       }
     }
-    & .btn-confirm{
+    & .btn__confirm{
       width: 400px;
     }
   }
@@ -125,7 +125,7 @@
         width: 290px;
       }
     }
-    & .btn-confirm{
+    & .btn__confirm{
       width: 290px;
     }
   }
