--- a/src/components/form-search/form-search.scss
+++ b/src/components/form-search/form-search.scss
@@ -51,7 +51,7 @@
     & .title-main {
       font-size: 23px;
     }
-    & .btn-confirm{
+    & .btn__confirm{
       width: 470px;
     }
   }
@@ -72,7 +72,7 @@
     }
   }
 
-  .form-search .btn-confirm {
+  .form-search .btn__confirm {
     max-width: 320px;
   }
 }
@@ -111,7 +111,7 @@
       }
     }
   }
-  .form-search .btn-confirm {
+  .form-search .btn__confirm {
     width: 280px;
     height: 50px;
   }
