--- a/src/components/signin-form/signin-form.scss
+++ b/src/components/signin-form/signin-form.scss
@@ -36,7 +36,7 @@
     &__container {
       padding: 15px 5px;
     }
-    & .btn-confirm {
+    & .btn__confirm {
       margin-bottom: 30px;
       width: 440px;
     }
@@ -59,7 +59,7 @@
     & .btn__signin {
       margin: 0 auto;
     }
-    & .btn-confirm {
+    & .btn__confirm {
       margin-bottom: 30px;
       width: 390px;
     }
@@ -81,7 +81,7 @@
       margin: 0 auto;
       margin-top: 35px;
     }
-    & .btn-confirm {
+    & .btn__confirm {
       margin-bottom: 30px;
       width: 300px;
     }
