--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -14,5 +14,4 @@ mixin form-search(title, subtitle, text)
         div(class='form-search__dropdown')
           +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
         div(class='form-search__button_confirm')  
-          a(href='filter-page.html')
-            button(type='button' class='btn  btn-confirm')= text
+          +button('подобрать номер', 'filter-page.html', 'btn__confirm')
