--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -59,7 +59,7 @@
       padding: 26px 18.5px;
     }
   }
-  & .header-btn-signin {
+  & .btn__signin_header {
     display: inline-block;
     padding: 11px 30px;
     border: 2.4px solid #bc9cff;
@@ -70,12 +70,8 @@
     text-decoration: none;
     font-family: "OpenSans-Bold";
     margin: 16px 25px 16px 23px;
-  }
-  & .btn-signup {
-    margin-top: 13px;
-  }
-  & .header__btn_signup {
     display: inline-block;
+    background: white;
   }
 }
 
