--- a/src/pages/filter-page/filter-page.pug
+++ b/src/pages/filter-page/filter-page.pug
@@ -1,5 +1,5 @@
 include ../../components/footer/footer.pug
-include ../../components/button-signin-header/button-signin-header.pug
+include ../../components/button/button.pug
 include ../../components/header/header.pug
 doctype html
 html
@@ -8,9 +8,8 @@ html
     meta(name="viewport", content="width=, initial-scale=1.0")
   body
     +header( ['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
-      +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
-      .header__btn_signup
-        +button-signup('Зарегистрироватьcя', 'signup-page.html')
+      +button('Войти', 'signin-page.html', 'btn__signin_header')
+      +button('Зарегистрироватьcя', 'signup-page.html', 'btn__signup')
     include ../../components/room-page/room-page.pug
     +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
     'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
