--- a/src/pages/info-page/info-page.pug
+++ b/src/pages/info-page/info-page.pug
@@ -1,5 +1,5 @@
 include ../../components/header/header.pug
-include ../../components/button-signin-header/button-signin-header.pug
+include ../../components/button/button.pug
 include ../../components/footer/footer.pug
 doctype html
 html
@@ -9,9 +9,8 @@ html
   body
   .info-page
     +header( ['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
-        +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
-        .header__btn_signup
-          +button-signup('Зарегистрироватьcя', 'signup-page.html')
+        +button('Войти', 'signin-page.html', 'btn__signin_header')
+        +button('Зарегистрироватьcя', 'signup-page.html', 'btn__signup')
     br
     include ../../components/info-room/info-room.pug
     +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
