--- a/src/pages/search-page/search-page.pug
+++ b/src/pages/search-page/search-page.pug
@@ -1,6 +1,6 @@
 include ../../components/header/header.pug
 include ../../components/form-search/form-search.pug
-include ../../components/button-signin-header/button-signin-header.pug
+include ../../components/button/button.pug
 include ../../components/footer/footer.pug
 doctype html
 html
@@ -9,11 +9,10 @@ html
     meta(name="viewport", content="width=, initial-scale=1.0")
   body
     +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
-      +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
-      .header__btn_signup
-      +button-signup('Зарегистрироватьcя', 'signup-page.html')
+      +button('Войти', 'signin-page.html', 'btn__signin_header')
+      +button('Зарегистрироватьcя', 'signup-page.html', 'btn__signup')
     .search__background
-      +form-search( 'Найдём номера под ваши пожелания', {checkin: 'Прибытие', checkout: 'Выезд', guests: 'Гости'}, 'подобрать номер')
+      +form-search( 'Найдём номера под ваши пожелания', {checkin: 'Прибытие', checkout: 'Выезд', guests: 'Гости'})
       p(class='slogan' style='white-space:pre;') 
         |Лучшие номера для вашей работы, 
         |  отдыха и просто вдохновения
