--- a/src/blocks/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/blocks/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -1,6 +1,6 @@
 mixin expandable-checkbox-list(title)
-    label.extracomfort
-        .extracomfort-button.title(id='extracomfort__button')= title
+    label(class='extracomfort')
+        div(class='title' id='extracomfort__button')= title
         input(type='checkbox' class='extracomfort__input' id='extracomfort__input')
         if block 
             block
