--- a/src/pages/signup-page/signup-page.scss
+++ b/src/pages/signup-page/signup-page.scss
@@ -1,4 +1,4 @@
-.sugnup-background {
+.sugnup__background {
   min-height: 930px;
   background-image: url(../../images/bg_in.jpg);
   background-repeat: no-repeat;
