--- a/src/pages/signup-page/signup-page.pug
+++ b/src/pages/signup-page/signup-page.pug
@@ -11,7 +11,7 @@ html
     +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
       +button('Войти', 'signin-page.html', 'btn__signin_header')
       +button('Зарегистрироватьcя', 'signup-page.html', 'btn__signup')
-    .sugnup-background
+    .sugnup__background
       +form-register( 'Регистрация аккаунта',  'дата рождения', 'данные для входа в сервис', 'Получать спецпредложения', 'Уже есть аккаунт на Toxin')
     +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
     'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
