--- a/src/blocks/btn-like/btn-like.pug
+++ b/src/blocks/btn-like/btn-like.pug
@@ -1,4 +1,4 @@
 mixin btn-like(quantity)
     button(class='btn-like') 
-        i(class='fas fa-heart') 
+        i(class='btn-like__icon fas fa-heart') 
         span(class='btn-like__quantity')= quantity
