--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -1,7 +1,7 @@
-.dropdown {
+.dd {
   display: inline-block;
   position: relative;
-  & .dd__item {
+  &__item {
     position: relative;
     display: inline-block;
     border: 1px solid rgba(31, 32, 65, 0.25);
@@ -20,7 +20,7 @@
     &::after {
       content: "";
       padding: 5px;
-      box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5)  inset;
+      box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
       display: inline-block;
       transform: rotate(-45deg);
       color: rgba(31, 32, 65, 0.5);
@@ -28,17 +28,17 @@
       left: 21.5em;
       top: 1.2em;
     }
-  }  
-  & .dd__input {
+  }
+  &__input {
     display: none;
     & + .dd__menu {
       display: none;
     }
     &:checked + .dd__menu {
       display: block;
-    }    
+    }
   }
-  & .dd__menu {
+  &__menu {
     width: 478px;
     position: absolute;
     top: 100%;
@@ -49,18 +49,20 @@
     background-color: #ffffff;
     list-style-type: none;
     margin-top: 0;
-    & > .menu__row {
-      padding: 5px 20px;
-      cursor: pointer;
-      white-space: nowrap;
-      display: flex;
-      justify-content: space-between;
-      &:hover {
-        background-color: #f6f6f6;
-      }  
+  }
+
+  &__row {
+    padding: 5px 20px;
+    cursor: pointer;
+    white-space: nowrap;
+    display: flex;
+    justify-content: space-between;
+    &:hover {
+      background-color: #f6f6f6;
     }
   }
-  & .dd__button {
+
+  &__button {
     width: 45px;
     height: 45px;
     border: 1px solid rgba(31, 32, 65, 0.25);
@@ -69,8 +71,8 @@
     background: #ffffff;
     outline: none;
     cursor: pointer;
-  } 
-  & .dd__title {
+  }
+  &__title {
     font-family: "Montserrat";
     font-style: normal;
     font-weight: bold;
@@ -80,42 +82,41 @@
     text-transform: uppercase;
     color: #1f2041;
   }
-  & .dd__text {
+  &__text {
     margin: 17px 17px 0 17px;
+  }
+  &__clean {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1rem;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: rgba(31, 32, 65, 0.5);
+    border: none;
+    background: transparent;
+    outline: none;
+    margin: 30px 0 10px 0px;
+    cursor: pointer;
+  }
+
+  &__apply {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1rem;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: #bc9cff;
+    border: none;
+    background: transparent;
+    outline: none;
+    margin: 30px 0px 10px 0;
+    cursor: pointer;
   }
 }
 
-.clean {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: bold;
-  font-size: 1rem;
-  line-height: 15px;
-  text-transform: uppercase;
-  color: rgba(31, 32, 65, 0.5);
-  border: none;
-  background: transparent;
-  outline: none;
-  margin: 30px 0 10px 0px;
-  cursor: pointer;
-}
-
-.apply {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 1rem;
-  line-height: 15px;
-  text-transform: uppercase;
-  color: #bc9cff;
-  border: none;
-  background: transparent;
-  outline: none;
-  margin: 30px 0px 10px 0;
-  cursor: pointer;
-}
-
 @media only screen and (max-width: 450px) {
-  .dropdown .dd__menu {
+  .dd__menu {
     width: 310px;
   }
 }
