--- a/src/blocks/pagination/pagination.pug
+++ b/src/blocks/pagination/pagination.pug
@@ -1,5 +1,5 @@
 mixin pagination(backButton, forwardButton)
-    div(class='content_detail__pagination cdp' actpage='1')
+    div(class='cdp' actpage='1')
         a(href='#!-1' class='cdp_i cdp_i_back')
             i(class='material-icons')= backButton
         each val in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
