--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -117,7 +117,7 @@
   }
 }
 
-.content_detail__pagination .material-icons {
+.cdp .material-icons {
   font-family: "MaterialIcons";
   font-weight: normal;
   font-style: normal;
