--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,41 +1,40 @@
 include ../../blocks/input-subscription/input-subscription.pug
 
 mixin footer(slogan, title, linkList1, linkList2, linkList3, offer, copyright)
-  footer.footer
-    .container
-      .footer__nav
-        .nav__column.nav__column_slogan
-          .logo(class='logo')
+  footer(class='footer')
+    div(class='footer__container')
+        div(class='footer__column footer__column_slogan')
+          div(class='footer__logo logo')
           div
             p(class='footer__slogan')= slogan
-        .nav__column
-          h3(class='subtitle')= title.name1
-          ul(class='column__items')
+        div(class='footer__column')
+          h3(class='footer__subtitle')= title.name1
+          ul(class='footer__items')
             each link in linkList1
-              li(class='items__item')
-               a(class='item__name')= link
-        .nav__column
-          h3(class='subtitle')= title.name2
-          ul(class='column__items')
+              li(class='footer__item')
+               a(class='footer__link')= link
+        div(class='footer__column')
+          h3(class='footer__subtitle')= title.name2
+          ul(class='footer__items')
             each link in linkList2
-              li(class='items__item')
-               a(class='item__name')= link
-        .nav__column
-          h3(class='subtitle')= title.name3
-          ul(class='column__items')
+              li(class='footer__item')
+               a(class='footer__link')= link
+        div(footer__column)
+          h3(class='footer__subtitle')= title.name3
+          ul(class='footer__items')
             each link in linkList3
-              li(class='items__item')
-               a(class='item__name')= link
-        .nav__column.nav__column_offer
-          h3(class='subtitle')= title.name4
-          p(class='offer__text')= offer
+              li(class='footer__item')
+               a(class='footer__link')= link
+        div(footer__column footer__column_offer)
+          h3(class='footer__subtitle')= title.name4
+          p(class='footer__text')= offer
           +input-subscription('Email')
     hr(class='footer__strip')
     div(class='footer__details container')
-      .flex-row
-          p(class='footer__details details__copyright')= copyright 
-          ul(class='details__icons row')
-              li(class='icons__item')
+      div(class='flex-row')
+          p(class='footer__copyright')= copyright 
+          ul(class='footer__icons row')
+              li(class='footer__icon')
                 a(href='#')
                   svg(width='0' height='0')
                     radialGradient(id='rg' r='150%' cx='30%' cy='107%')
@@ -46,7 +45,7 @@ mixin footer(slogan, title, linkList1, linkList2, linkList3, offer, copyright)
                       stop(stop-color='#BC9CFF' offset='0.9')
                   div.div
                     i(class='fab fa-twitter' aria-hidden='true')
-              li(class='icons__item')
+              li(class='footer__icon')
                 a(href='#')
                   svg(width='0' height='0')
                     radialGradient(id='rg' r='150%' cx='30%' cy='107%')
@@ -57,7 +56,7 @@ mixin footer(slogan, title, linkList1, linkList2, linkList3, offer, copyright)
                       stop(stop-color='#8BA4F9' offset='0.9')
                   div.div
                     i(class='fab fa-facebook-square' aria-hidden='true')
-              li(class='icons__item')
+              li(class='footer__icon')
                 a(href='#')
                   svg(width='0' height='0')
                     radialGradient(id='rg' r='150%' cx='30%' cy='107%')
