--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -3,7 +3,8 @@ mixin form-signin(title, login)
   div(class='form-signin')
     div(class='form-signin__container')
       h1(class='title-main')= title
-      +input-text('Email')
+      div(class='form-signin__input')
+        +input-text('Email')
       div(class='form-signin__input form-signin__input_second')
         +input-text('Пароль')
       +button('Войти', '#', 'btn__confirm form-signin__button')
