--- a/src/blocks/airdatepicker/airdatepicker.scss
+++ b/src/blocks/airdatepicker/airdatepicker.scss
@@ -1,5 +1,5 @@
-.datepicker {
-  &__input {
+.date-dropdown{
+  &__range{
     position: relative;
     display: inline-block;
     &::before {
@@ -15,7 +15,7 @@
       color: rgba(31, 32, 65, 0.5);
     }
   }
-  &__range {
+  &__input {
     width: 220px;
     height: 65px;
     border-radius: 4px;
