--- a/src/blocks/dropdown/dropdown.pug
+++ b/src/blocks/dropdown/dropdown.pug
@@ -1,26 +1,26 @@
 mixin dropdown(title,  subtitle1,  subtitle2,  subtitle3) 
-  label.dropdown
+  label(class='dd')
     .dd__item(id= title.id)= title.name
     input(type='checkbox' class='dd__input' id='test')
     ul(class='dd__menu')
-      li(class='menu__row')
+      li(class='dd__row')
         p(class='dd__title')= subtitle1.name
         .flex-row
-          button(class='plus dd__button' id= subtitle1.plus) +
+          button(class='dd__button' id= subtitle1.plus) +
           p(class='dd__text' id= subtitle1.number) 0
-          button(class='minus dd__button' id= subtitle1.minus) -
-      li(class='menu__row')
+          button(class='dd__button' id= subtitle1.minus) -
+      li(class='dd__row')
         p(class='dd__title')= subtitle2.name
         .flex-row
-          button(class='plus dd__button' id= subtitle2.plus) +
+          button(class='dd__button' id= subtitle2.plus) +
           p(class='dd__text' id= subtitle2.number) 0
-          button(class='minus dd__button' id= subtitle2.minus) -
-      li(class='menu__row')
+          button(class='dd__button' id= subtitle2.minus) -
+      li(class='dd__row')
         p(class='dd__title')= subtitle3.name
         .flex-row
-          button(class='plus dd__button' id= subtitle3.plus) +
+          button(class='dd__button' id= subtitle3.plus) +
           p(class='dd__text' id= subtitle3.number) 0
-          button(class='minus dd__button' id= subtitle3.minus) -
-      li(class='menu__row')
-          button(class='clean' id='clean') Очистить
-          button(class='apply' id='apply') Применить  
+          button(class='dd__button' id= subtitle3.minus) -
+      li(class='dd__row')
+          button(class='dd__clean' id='clean') Очистить
+          button(class='dd__apply' id='apply') Применить  
