--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -4,8 +4,15 @@
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   border-radius: 7px;
   margin: 20px 0;
+}
+
+.description {
   &__container {
     padding: 25px 30px;
+  }
+  &__wrap{
+    display: flex;
+    justify-content: space-between;
   }
   &__number {
     font-style: normal;
@@ -26,12 +33,11 @@
   &__line {
     border-bottom: 2px solid rgb(220, 220, 220);
   }
-  &_per-day {
+  &__per-day {
     font-weight: normal;
     font-size: 1rem;
   }
 }
-
 
 //start styles for carousel
 %animation-default {
@@ -360,6 +366,9 @@
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
     border-radius: 7px;
     margin: 20px 0;
+  }
+
+  .carousel {
     &__img {
       width: 100%;
       height: 200px;
@@ -367,6 +376,8 @@
       border-top-left-radius: 7px;
       border-top-right-radius: 7px;
     }
+  }
+  .description {
     &__container {
       padding: 10px 20px;
     }
