--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,77 +1,67 @@
 .footer {
   background-color: #fff;
-  &__nav {
+  &__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0 10px 10px;
     margin-top: 100px;
-    & .nav {
-      &__column {
-        margin: 0 10px 10px;
-        text-decoration: none;
-        &_slogan {
-          max-width: 380px;
-        }
-        &_offer {
-          max-width: 380px;
-        }
-        & .offer__text {
-          color: rgba(31, 32, 65, 0.75);
-          font-family: "Montserrat";
-          font-weight: bold;
-          font-size: 1.14rem;
-          line-height: 33px;
-        }
-        & .column__items {
-          padding: 0;
-          & > .items__item {
-            padding: 28px 0;
-            & > .item__name {
-              font-family: "Montserrat";
-              font-size: 1.14rem;
-              color: rgba(31, 32, 65, 0.5);
-            }
-          }
-        }
-      }
+    width: 80.5vw;
+    margin: 0 auto;
+  }
+  &__column {
+    margin: 0 10px 10px;
+    text-decoration: none;
+    &_slogan {
+      max-width: 380px;
     }
+    &_offer {
+      max-width: 380px;
+    }
+  }
+  &__subtitle {
+    font-size: 18px;
+    font-family: "Montserrat";
+    text-transform: uppercase;
+    margin-block-start: 0.7em;
+  }
+  &__items {
+    padding: 0;
+  }
+  &__item {
+    padding: 28px 0;
+  }
+  &__link {
+    font-family: "Montserrat";
+    font-size: 1.14rem;
+    color: rgba(31, 32, 65, 0.5);
+  }
+  &__text {
+    color: rgba(31, 32, 65, 0.75);
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 1.14rem;
+    line-height: 33px;
+    max-width: 400px;
   }
   &__details {
     padding-top: 5px;
     padding-bottom: 20px;
     justify-content: space-between;
-    & .details__copyright {
-      color: #1f2041;
-      font-family: "Montserrat";
-      font-weight: bold;
-      font-size: 1.14rem;
-      line-height: 33px;
-      margin-left: 20px;
-      margin-block-start: 0.8em;
-      color: rgba(31, 32, 65, 0.75);
-      font-family: "Montserrat";
-      font-weight: bold;
-      font-size: 1.14rem;
-      line-height: 33px;
-    }
-    & .svg-inline--fa {
-      font-size: 35px;
-      line-height: 23px;
-      display: flex;
-      align-items: center;
-      text-align: center;
-      margin-left: 15px;
-      &:last-child {
-        margin-right: 20px;
-      }
-      & .icons__item {
-        height: 30px;
-        width: 40px;
-        margin-top: -25px;
-        margin-right: 22px;
-      }
-    }
+  }
+  &__copyright {
+    color: #1f2041;
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 1.14rem;
+    line-height: 33px;
+    margin-left: 20px;
+    margin-block-start: 0.8em;
+    color: rgba(31, 32, 65, 0.75);
+    font-family: "Montserrat";
+    font-weight: bold;
+    font-size: 1.14rem;
+    line-height: 33px;
   }
   &__slogan {
     margin-top: 20px;
@@ -81,8 +71,13 @@
     font-size: 1.14rem;
     line-height: 33px;
   }
+  &__icon {
+    height: 30px;
+    width: 40px;
+    margin-top: -25px;
+    margin-right: 22px;
+  }
 }
-
 //These styles need for the gradient
 .div {
   display: flex;
@@ -97,35 +92,31 @@
 @media only screen and (max-width: 600px) {
   .footer {
     padding-bottom: 30px;
-    &__nav {
+    &__container {
       padding: 0 0px 10px;
       padding-top: 50px;
       margin-top: 20px;
-      & .nav {
-        &__column {
-          margin: 0 0px 10px;
-          text-decoration: none;
-          & > .offer__text {
-            color: rgba(31, 32, 65, 0.75);
-            font-family: "Montserrat";
-            font-weight: bold;
-            font-size: 1.14rem;
-            line-height: 33px;
-          }
-          & .column {
-            &__items {
-              padding: 0;
-              & > .items__item {
-                padding: 10px 0;
-                & > .item__name {
-                  font-size: 1.3rem;
-                  color: #1f2041;
-                }
-              }
-            }
-          }
-        }
-      }
+    }
+    &__column {
+      margin: 0 0px 10px;
+      text-decoration: none;
+    }
+    &__text {
+      color: rgba(31, 32, 65, 0.75);
+      font-family: "Montserrat";
+      font-weight: bold;
+      font-size: 1.14rem;
+      line-height: 33px;
+    }
+    &__items {
+      padding: 0;
+    }
+    &__item {
+      padding: 10px 0;
+    }
+    &__link {
+      font-size: 1.3rem;
+      color: #1f2041;
     }
     &__strip {
       display: none;
