--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,13 +1,15 @@
 mixin header(links)
-  div(class='menu')
-    div(class='menu__container container')
-      div(id='logo' class='menu__logo logo')
-      label(for='drop' class='menu__toggle') 
+  div(class='header')
+    div(class='header__container container')
+      div(id='logo' class='logo')
+      div(class='menu')
+        label(for='drop' class='menu_toggle') 
           i(class='fa fa-bars' aria-hidden='true')
-      input(type='checkbox' class='menu__drop' id='drop')
-      ul(class='menu__nav')
-        each i in links
-          li(class='nav__item')
-            a(class='nav__item item__link')= i
-        if block
-          block
+        input(type='checkbox' class='menu_drop' id='drop')
+        ul(class='menu__nav')
+          each i in links
+            li(class='menu__item')
+              a(class='menu__link')= i
+          if block
+            block
+
