fix border for radio button

--- a/src/blocks/radio-button/radio-button.scss
+++ b/src/blocks/radio-button/radio-button.scss
@@ -34,7 +34,7 @@
       + .radio__label {
         &:before {
           outline: none;
-          border-color: #fff;
+          border: 2px solid #bc9cff;
         }
       }
     }
